--- a/po/R-MASS.pot
+++ b/po/R-MASS.pot
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MASS 7.3-61\n"
-"POT-Creation-Date: 2024-09-15 20:16\n"
+"POT-Creation-Date: 2024-10-05 20:29\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1175,16 +1175,10 @@ msgstr ""
 
 
 #: R/negbin.R: 0
-#. R/negbin.R: message("theta.ml: iter", it, " theta =", signif(t0))
+#. R/negbin.R: gettextf("theta.ml: iter %d 'theta = %f'", it, signif(t0))
+#. R/negbin.R: gettextf("theta.ml: iter %d 'theta = %f'", it, signif(t0))
 
-msgid "theta ="
-msgstr ""
-
-
-#: R/negbin.R: 0
-#. R/negbin.R: message("theta.ml: iter", it, " theta =", signif(t0))
-
-msgid "theta.ml: iter"
+msgid "theta.ml: iter %d 'theta = %f'"
 msgstr ""
 
 
@@ -1276,7 +1270,7 @@ msgstr ""
 
 
 #: R/stdres.R: 0
-#. R/stdres.R: ngettext(n.miss, "%d missing observation deleted", "%d missing observations deleted")
+#. R/stdres.R: ngettext(n.miss, "%d missing observation deleted", "%d missing observations deleted",     domain = "R-MASS")
 
 msgid        "%d missing observation deleted"
 msgid_plural "%d missing observations deleted"
@@ -1285,7 +1279,7 @@ msgstr[1]    ""
 
 
 #: R/stdres.R: 0
-#. R/stdres.R: ngettext(sum(excl), "%d row with zero weights not counted", "%d rows with zero weights not counted")
+#. R/stdres.R: ngettext(sum(excl), "%d row with zero weights not counted", "%d rows with zero weights not counted",     domain = "R-MASS")
 
 msgid        "%d row with zero weights not counted"
 msgid_plural "%d rows with zero weights not counted"
@@ -1294,7 +1288,7 @@ msgstr[1]    ""
 
 
 #: R/lda.R: 0
-#. R/lda.R: ngettext(length(empty), "group %s is empty", "groups %s are empty")
+#. R/lda.R: ngettext(length(empty), "group %s is empty", "groups %s are empty",     domain = "R-MASS")
 
 msgid        "group %s is empty"
 msgid_plural "groups %s are empty"
@@ -1313,7 +1307,7 @@ msgstr[1]    ""
 
 
 #: R/add.R: 0
-#. R/add.R: ngettext(newn, "using the %d/%d row from a combined fit", "using the %d/%d rows from a combined fit")
+#. R/add.R: ngettext(newn, "using the %d/%d row from a combined fit", "using the %d/%d rows from a combined fit",     domain = "R-MASS")
 
 msgid        "using the %d/%d row from a combined fit"
 msgid_plural "using the %d/%d rows from a combined fit"
@@ -1322,7 +1316,7 @@ msgstr[1]    ""
 
 
 #: R/lda.R: 0
-#. R/lda.R: ngettext(length(const), "variable %s appears to be constant within groups",     "variables %s appear to be constant within groups")
+#. R/lda.R: ngettext(length(const), "variable %s appears to be constant within groups",     "variables %s appear to be constant within groups", domain = "R-MASS")
 
 msgid        "variable %s appears to be constant within groups"
 msgid_plural "variables %s appear to be constant within groups"
