--- a/po/R-fr.po
+++ b/po/R-fr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MASS 7.2-20\n"
 "Report-Msgid-Bugs-To: bugs@r-project.org\n"
-"POT-Creation-Date: 2024-09-15 20:16\n"
+"POT-Creation-Date: 2024-10-05 20:29\n"
 "PO-Revision-Date: 2021-04-12 18:55+0200\n"
 "Last-Translator: Philippe Grosjean <phgrosjean@sciviews.org>\n"
 "Language-Team: French <R-core@r-project.org>\n"
@@ -847,14 +847,11 @@ msgstr "tests réalisés sans ré-estimer 'theta'"
 msgid "the contrast defined is empty (has no TRUE elements)"
 msgstr "le contraste défini est vide (aucun élément TRUE)"
 
-#. R/negbin.R: message("theta.ml: iter", it, " theta =", signif(t0))
+#. R/negbin.R: gettextf("theta.ml: iter %d 'theta = %f'", it, signif(t0))
+#. R/negbin.R: gettextf("theta.ml: iter %d 'theta = %f'", it, signif(t0))
 #: R/negbin.R:0
-msgid "theta ="
-msgstr "theta ="
-
-#. R/negbin.R: message("theta.ml: iter", it, " theta =", signif(t0))
-#: R/negbin.R:0
-msgid "theta.ml: iter"
+#, fuzzy
+msgid "theta.ml: iter %d 'theta = %f'"
 msgstr "theta.lm : itér"
 
 #. R/add.R: gettextf("trying + %s", tt)
@@ -919,21 +916,21 @@ msgstr "nombre de variables incorrect"
 msgid "zero or negative distance between objects %d and %d"
 msgstr "distance négative ou nulle entre les objets %d et %d"
 
-#. R/stdres.R: ngettext(n.miss, "%d missing observation deleted", "%d missing observations deleted")
+#. R/stdres.R: ngettext(n.miss, "%d missing observation deleted", "%d missing observations deleted",     domain = "R-MASS")
 #: R/stdres.R:0
 msgid "%d missing observation deleted"
 msgid_plural "%d missing observations deleted"
 msgstr[0] "%d observation manquante supprimée"
 msgstr[1] "%d observations manquantes supprimées"
 
-#. R/stdres.R: ngettext(sum(excl), "%d row with zero weights not counted", "%d rows with zero weights not counted")
+#. R/stdres.R: ngettext(sum(excl), "%d row with zero weights not counted", "%d rows with zero weights not counted",     domain = "R-MASS")
 #: R/stdres.R:0
 msgid "%d row with zero weights not counted"
 msgid_plural "%d rows with zero weights not counted"
 msgstr[0] "%d ligne de poids nul non comptabilisée"
 msgstr[1] "%d lignes de poids nul non comptabilisées"
 
-#. R/lda.R: ngettext(length(empty), "group %s is empty", "groups %s are empty")
+#. R/lda.R: ngettext(length(empty), "group %s is empty", "groups %s are empty",     domain = "R-MASS")
 #: R/lda.R:0
 msgid "group %s is empty"
 msgid_plural "groups %s are empty"
@@ -948,19 +945,22 @@ msgid_plural "only %d sets, so all sets will be tried"
 msgstr[0] "seulement %d ensemble, donc tous les ensembles seront essayés"
 msgstr[1] "seulement %d ensembles, donc tous les ensembles seront essayés"
 
-#. R/add.R: ngettext(newn, "using the %d/%d row from a combined fit", "using the %d/%d rows from a combined fit")
+#. R/add.R: ngettext(newn, "using the %d/%d row from a combined fit", "using the %d/%d rows from a combined fit",     domain = "R-MASS")
 #: R/add.R:0
 msgid "using the %d/%d row from a combined fit"
 msgid_plural "using the %d/%d rows from a combined fit"
 msgstr[0] "utilisation de %d/%d ligne pour un ajustement combiné"
 msgstr[1] "utilisation des %d/%d lignes pour un ajustement combiné"
 
-#. R/lda.R: ngettext(length(const), "variable %s appears to be constant within groups",     "variables %s appear to be constant within groups")
+#. R/lda.R: ngettext(length(const), "variable %s appears to be constant within groups",     "variables %s appear to be constant within groups", domain = "R-MASS")
 #: R/lda.R:0
 msgid "variable %s appears to be constant within groups"
 msgid_plural "variables %s appear to be constant within groups"
 msgstr[0] "la variable %s semble être constante à l'intérieur des groupes"
 msgstr[1] "les variables %s semblent être constantes à l'intérieur des groupes"
+
+#~ msgid "theta ="
+#~ msgstr "theta ="
 
 #~ msgid "negative values not allowed for the Negative Binomal family"
 #~ msgstr "valeurs négatives non autorisées pour la famille binomiale négative"
